--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -53,16 +53,18 @@ services:
       retries: 10
       timeout: 2s
   redis:
+    image: redis:6.2
     command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
     environment:
       REDIS_PASSWORD: "${REDIS_PASSWORD}"
     volumes:
       - coolify-redis:/data
     healthcheck:
-      test: redis-cli ping
+      test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       retries: 10
       timeout: 2s
+
   soketi:
     image: 'ghcr.io/coollabsio/coolify-realtime:1.0.6'
     ports:
